[metadata]
name = tabletop
version = 0.0.1

[options]
packages = find:
install_requires =
  pyyaml

[options.entry_points]
console_scripts =
  grind = dice.applications.grind:Grind.Run
  roll = dice.applications.roll:Roll.Run
  tabletop = tabletop.applications.tabletop:TabletopTerminalApplication.Run
